--- a/test.config
+++ b/test.config
@@ -4148,7 +4148,7 @@ CONFIG_PACKAGE_libcap=y
 # CONFIG_PACKAGE_libcoap is not set
 CONFIG_PACKAGE_libcomerr=y
 CONFIG_PACKAGE_libconfig=y
-CONFIG_PACKAGE_libcryptopp=y
+# CONFIG_PACKAGE_libcryptopp is not set
 # CONFIG_PACKAGE_libctf is not set
 CONFIG_PACKAGE_libcurl=y
 
